# data-glossary

./: GENERATION_GUIDE.md  INDEX.md  README-docs.md  README.md  TEMPLATE.md  TOPICS.md  analyze-topic-structure.sh  detect-empty-sections.sh  fill-topic.sh  generate-topic.sh  generate-topics.py  mkdocs.yml  pyproject.toml  requirements-docs.txt  sync-topic-status.sh
advanced/: auto-scaling.md  caching-strategies.md  data-versioning.md  fault-tolerance.md  feature-stores.md  parallel-processing.md  resource-management.md  reverse-etl.md  vertical-scaling.md
ai-ml/: ai-powered-data-processing.md  computer-vision-data-pipelines.md  data-labeling.md  feature-engineering.md  feature-pipelines.md  feature-scaling.md  feature-selection.md  feature-transformation.md  feature-validation.md  generative-ai-for-data.md  mcp.md  ml-data-lineage.md  mlops.md  model-drift-detection.md  model-inference-pipelines.md  model-registry.md  model-serving.md  model-training-pipelines.md  natural-language-to-sql.md  online-vs-offline-features.md
analytics/: ad-hoc-analytics.md  analytical-databases.md  business-intelligence.md  cohort-analysis.md  columnar-analytics.md  in-memory-analytics.md  interactive-dashboards.md  multidimensional-analysis.md  olap.md  pivot-operations.md  predictive-analytics.md  reporting-pipelines.md  scheduled-reporting.md  self-service-analytics.md  sql-analytics.md  streaming-analytics.md  time-series-analysis.md
app/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
architecture/: batch-processing.md  data-fabric-architecture.md  (+12 more)
(+819 files in other folders)
